# asr-stat-kit

./: .gitignore  README_INSTALL.md  _context_for_ai.txt  pack_for_ai.py  pyproject.toml
src/asr_stat_kit/: cli.py  components.py  config.py  interfaces.py  pipeline.py
src/asr_stat_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
