[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-stat-kit"
version = "1.0.0"
description = "Automated ASR Version Comparison and Statistical Reporting Tool"
authors = [{ name = "ASR Team", email = "dev@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "xlsxwriter>=3.0.0",
    "argcomplete>=2.0.0",
    "openpyxl>=3.0.0"
]

[project.scripts]
asr-kit = "asr_stat_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
